--- a/src/ui/buttons/buttons.css
+++ b/src/ui/buttons/buttons.css
@@ -4,7 +4,7 @@
     font-size:18px;
     background-color: var(--secondary-color);
     border-radius: 4px;
-    width:100%;
+    width:335px;
     height:50px;
     transition:0.7s ease;
     cursor:pointer;
