--- a/src/ui/inputs/inputs.css
+++ b/src/ui/inputs/inputs.css
@@ -2,6 +2,10 @@
     padding: 10px;
     height: auto;
     min-height:40px;
-    border:none;
+    border: 2px solid #000000;
+    width: 100%;
+    max-width: 350px;
+    min-width: 100px;
+    border-radius: 4px;
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 20%);
 }
