--- a/src/ui/buttons/buttons.css
+++ b/src/ui/buttons/buttons.css
@@ -1,30 +1,31 @@
-.my-button{
+.main,.secondary,.border{
     font-family:'Poppins';
     font-weight:bold;
     font-size:18px;
     background-color: var(--secondary-color);
     border-radius: 4px;
-    width:335px;
+    max-width:335px;
+    width: 100%;
     height:50px;
     transition:0.7s ease;
     cursor:pointer;
 }
 
-.my-button.secondary{
+.secondary{
     background-color: var(--tertiary-color);
 }
 
-.my-button.border{
+.border{
     color:var(--main-color);
     background:transparent;
     border: solid 3px var(--main-color);
     border-radius: 4px;
 }
 
-.my-button:hover{
+.main:hover{
     color:white;
 }
-.my-button.border:hover{
+.border:hover{
     background-color: var(--main-color);
     color:white;
 }
