--- a/src/ui/texts/texts.css
+++ b/src/ui/texts/texts.css
@@ -5,6 +5,13 @@
     font-weight: 400;
 }
 
+
 .error{
     color:red;
+}
+
+.underline{
+    text-decoration:underline;
+    color:blue;
+    cursor:pointer;
 }
