--- a/src/ui/buttons/buttons.css
+++ b/src/ui/buttons/buttons.css
@@ -5,6 +5,7 @@
     background-color: var(--secondary-color);
     border-radius: 4px;
     min-width:210px;
+    border-color:var(--border-color);
     width: 100%;
     height:50px;
     transition:0.7s ease;
