--- a/src/ui/inputs/inputs.css
+++ b/src/ui/inputs/inputs.css
@@ -2,7 +2,7 @@
     padding: 10px;
     height: auto;
     min-height:40px;
-    border: 2px solid #000000;
+    border: 2px solid var(--border-color);
     width: 100%;
     min-width: 100px;
     border-radius: 4px;
