--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
     --main-color:#FF6868;
     --secondary-color: #FF9DF5;
     --tertiary-color:#97EA9F;
-    --found-color:#32a852;
+    --success-color:#32a852;
     --border-color:#555555;
     --header-height:75px;
     --remaining-page-height: calc(100vh - var(--header-height));
